# static-analysis-tool-wasm

./: README.md
wasabi-874fc257278842cb/7f8460f/lib/wasm/binary_derive/src/: lib.rs
wasabi-874fc257278842cb/7f8460f/lib/wasm/src/: binary.rs
wasabi-874fc257278842cb/7f8460f/lib/wasm/src/ast/: common.rs  convert.rs  highlevel.rs  lowlevel.rs
wasabi-874fc257278842cb/7f8460f/src/: options.rs
wasabi-874fc257278842cb/7f8460f/src/instrument/add_hooks/: hook_map.rs  mod.rs
wasm-security-analysis/: Cargo.toml
wasm-security-analysis/src/: main.rs
